# openinkoopdata_appchallenge

./: .gitignore  README.md  package.json  pyproject.toml
backend/: pyproject.toml
backend/backend/: main.py
backend/src/: chain.py  handler.py  main.py  pydantic_models.py
datapipeline/: .env.example  .gitignore  Dockerfile  README.md  load_all.sh  load_daily.sh  pyproject.toml
datapipeline/datapipeline/: clean_publications_tenderned.py  extract_documents_categorieplannen.py  extract_documents_pianoo.py  extract_documents_rijksvoorwaarden.py  extract_documents_tenderned.py  extract_publications_tenderned.py  init_weaviate.py  insert_documents_vectordb.py  load_all.sh  pianoo.py  pianoo_scraper.py  store_documents_as_txt.py
datapipeline/notebooks/: explore.ipynb
datapipeline/utils/: gcp_helpers.py
diagrams/: chatwindow.drawio  webappslagingskans.drawio
docs/logos/: TenderflowLogo-Breed.xcf
frontend/: .env.example  cors.json  next.config.js  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: actions.ts  globals.css  layout.tsx  not-found.tsx
frontend/components/: chat-history.tsx  chat-list.tsx  chat-message.tsx  chat-panel.tsx  chat-share-dialog.tsx  chat.tsx  (+18 more)
rag/: insert_documents.py  pyproject.toml  rag.py  test_rag.ipynb
rag/app/: insert_documents.py  query_chat_history.js  query_chat_history.py  query_hybrid.py  query_qa.py  query_self.py  rag.py  weviate_rag.py
rag/app/eval/: evaluation.py  evaluator.py  generator.py  main.py  main_pianoo.py  pipeline.py  prompts.py  rag.py
rag/app/eval/results/: qa_pairs_pianoo.json  qa_pairs_tender341216.json  qa_pairs_tender341286.json  qa_pairs_tender341298.json  qa_pairs_tender341611.json  qa_pairs_tender342228.json  qa_pairs_tender342367.json  qa_pairs_tender342374.json  qa_pairs_tender342386.json  qa_pairs_tender342512.json  qa_pairs_tender342551.json  qa_pairs_tender342902.json  qa_pairs_tender343523.json  qa_pairs_tender343697.json  qa_pairs_tender343710.json  qa_pairs_tender343719.json  qa_pairs_tender344050.json  qa_pairs_tender344061.json  qa_pairs_tender344069.json  qa_pairs_tender344465.json  qa_pairs_tender344702.json  qa_pairs_tender344729.json  qa_pairs_tender344738.json  qa_pairs_tender345397.json  qa_pairs_tender345519.json  qa_pairs_tender345577.json  qa_pairs_tender345587.json  qa_pairs_tender345672.json  qa_pairs_tender345697.json  qa_pairs_tender345700.json  qa_pairs_tender345772.json  qa_pairs_tender345819.json  qa_pairs_tender345848.json  qa_pairs_tender346048.json  qa_pairs_tender346057.json  qa_pairs_tender346061.json  qa_pairs_tender346113.json  qa_pairs_tender346135.json  qa_pairs_tender346252.json  qa_pairs_tender346608.json  (+69 more)
rag/models/: model.py
(+46 files in other folders)
