[tool.poetry]
name = "datapipeline"
version = "0.1.0"
description = ""
authors = ["Bash- <Bash-@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
delta = "^0.4.2"
polars = "^0.20.17"
deltalake = "^0.16.3"
ipykernel = "^6.29.4"
google-cloud-storage = "^2.16.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
